--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,37 @@
 # PROJECT FOLDERS & FILES
 
 *.sublime-project
-
-# ---------------------------------------------- #
-
-### SublimeText ###
 *.sublime-workspace
 
-### SASS ###
-*.sass-cache
 
-### Compass ###
-.sass-cache
+# Ignore hidden folders #
+# This takes care of .tmp, .sass-cache, and many others #
+.*/
 
-# ---------------------------------------------- #
+# Ignore OS generated files #
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Always-ignore files and folders #
+*.diff
+*.err
+*.log
+*.orig
+*.rej
+*.swn
+*.swo
+*.swp
+._*
+*~
+
+# Ignore packages #
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
